<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_avrang_main"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_avrang_catalog"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_avrang_favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_avrang_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_avrang_cart"
        android:title="@string/title_cart" />

</menu>