<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.contacts.ContactsFragment">

   <LinearLayout
       android:padding="16dp"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:text="@string/contact_center"
           android:layout_width="wrap_content"
           android:textColor="@color/textcolor"
           android:layout_marginBottom="20dp"
           android:textSize="20dp"
           android:textStyle="bold"

           android:layout_height="wrap_content"/>
       <LinearLayout
           android:orientation="horizontal"
           android:layout_marginBottom="34dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@mipmap/phpnegroup"
               android:layout_width="60dp"
               android:layout_height="60dp"/>
           <TextView
               android:text="@string/phone1"
               android:layout_marginStart="15dp"
               android:layout_width="wrap_content"
               android:textColor="@color/textcolor"
               android:textSize="18dp"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:orientation="horizontal"
           android:layout_marginBottom="34dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@drawable/group_532mailgroup"
               android:layout_width="60dp"
               android:layout_height="60dp"/>
           <TextView
               android:text="@string/contact_email"
               android:layout_marginStart="15dp"
               android:layout_width="wrap_content"
               android:textColor="@color/textcolor"
               android:textSize="18dp"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:orientation="horizontal"
           android:layout_marginBottom="34dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@drawable/timegroup"
               android:layout_width="60dp"
               android:layout_height="60dp"/>
           <TextView
               android:text="@string/contanct_timework"
               android:layout_marginStart="15dp"
               android:layout_width="wrap_content"
               android:textColor="@color/textcolor"
               android:textSize="18dp"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <TextView
           android:text="@string/service_center"
           android:textSize="20dp"
           android:layout_width="wrap_content"
           android:textColor="@color/textcolor"
           android:layout_marginBottom="20dp"
           android:textStyle="bold"
           android:layout_height="wrap_content"/>

       <LinearLayout
           android:orientation="horizontal"
           android:layout_marginBottom="34dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@mipmap/phpnegroup"
               android:layout_width="60dp"
               android:layout_height="60dp"/>
           <TextView
               android:text="@string/service_phone"
               android:layout_marginStart="15dp"
               android:layout_width="wrap_content"
               android:textColor="@color/textcolor"
               android:textSize="18dp"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:orientation="horizontal"
           android:layout_marginBottom="34dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@drawable/group_532mailgroup"
               android:layout_width="60dp"
               android:layout_height="60dp"/>
           <TextView
               android:text="@string/service_email"
               android:layout_marginStart="15dp"
               android:layout_width="wrap_content"
               android:textColor="@color/textcolor"
               android:textSize="18dp"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:orientation="horizontal"
           android:layout_marginBottom="34dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@drawable/timegroup"
               android:layout_width="60dp"
               android:layout_height="60dp"/>
           <TextView
               android:text="@string/service_timework"
               android:layout_marginStart="15dp"
               android:layout_width="wrap_content"
               android:textColor="@color/textcolor"
               android:textSize="18dp"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <TextView
           android:text="@string/weinsoc"
           android:textSize="20dp"
           android:layout_width="wrap_content"
           android:textColor="@color/textcolor"
           android:layout_marginBottom="20dp"
           android:textStyle="bold"
           android:layout_height="wrap_content"/>
       <ImageView
           android:src="@drawable/socs"
           android:layout_width="wrap_content"
           android:layout_height="50dp"/>

       <androidx.cardview.widget.CardView
           app:cardCornerRadius="10dp"
           app:cardElevation="0dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@mipmap/map"
               android:layout_width="match_parent"
               android:scaleType="centerCrop"
               android:layout_height="200dp"/>
       </androidx.cardview.widget.CardView>

   </LinearLayout>

</androidx.core.widget.NestedScrollView>