<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.signIn.SignIn">

    <TextView
        android:id="@+id/lable_textview1"
        android:text="@string/input_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />
    <TextView
        android:id="@+id/label_phone_textview"
        android:text="@string/phone"
        android:textSize="@dimen/text_small_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/lable_textview1"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/signIn_phonenum"
        android:background="@drawable/edittext_corner"
        android:hint="Номер телефона"
        android:textSize="@dimen/text_input_size"
        android:padding="@dimen/edit_text_padding"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_phone_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/label_password_textview"
        android:text="@string/password"
        android:textSize="@dimen/text_small_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/signIn_phonenum"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/signIn_password"
        android:background="@drawable/edittext_corner"
        android:hint="@string/password"
        android:textSize="@dimen/text_input_size"
        android:padding="@dimen/edit_text_padding"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_password_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/signIn_forgot_password"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red_primary"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/signIn_password"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/signIn_signup"
        android:text="@string/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red_primary"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/signIn_password"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/frameCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/signIn_enter"
            app:cardCornerRadius="7dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/red_primary"
            android:backgroundTint="@color/red_primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:text="@string/enter"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />                </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>